Refactoring per definire il service come component, rimosse dipendenze non usate, fix vari